# arkalos

./: .gitignore  README.md  pyproject.toml
src/arkalos/: __init__.py
src/arkalos/ai/: __init__.py
src/arkalos/ai/agents/: ai_agent.py  dwh_agent.py
src/arkalos/ai/envs/: ai_env.py  console_env.py
src/arkalos/ai/tasks/: ai_task.py  search_dwh_task.py  text_to_sql_task.py  which_task.py
src/arkalos/cli/: __init__.py
src/arkalos/core/: app.py
src/arkalos/data/warehouse/: data_warehouse.py
src/arkalos/data/warehouse/sqlite/: sqlite_warehouse.py
templates/starter/frontend/: package-lock.json
