[project]
name = "arkalos"
version = "0.1.0"
description = "Arkalos is an easy-to-use framework for data analysis, building data apps, warehouses, AI agents, robots, ML, training LLMs with elegant syntax. It just works."
readme = "README.md"
authors = [
    { name = "Mev-Rael" }
]
license= "MIT"
license-files = ["LICEN[CS]E*"]
keywords = ["framework", "ai", "ml", "warehouse", "etl", "notion", "airtable", "sqlite"]
requires-python = ">=3.13"
dependencies = [
    "altair>=5.5.0",
    "datasets>=3.2.0",
    "faker>=35.0.0",
    "google-api-python-client>=2.160.0",
    "google-api-python-client-stubs>=1.29.0",
    "matplotlib>=3.10.0",
    "nltk>=3.9.1",
    "numpy>=2.2.2",
    "ollama>=0.4.7",
    "pandas>=2.2.3",
    "polars>=1.20.0",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.1",
    "seaborn>=0.13.2",
    "types-requests>=2.32.0.20241016",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "mypy>=1.15.0",
]

[project.urls]
Homepage = "https://arkalos.com"
Documentation = "https://arkalos.org/docs"
Repository = "https://github.com/arkalos/arkalos.git"
Issues = "https://github.com/arkalos/arkalos/issues"
Changelog = "https://github.com/arkalos/arkalos/blob/master/CHANGELOG.md"

[project.scripts]
arkalos = "arkalos.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel.force-include]
"templates" = "arkalos/templates"

[tool.mypy]
warn_unused_ignores = true

